--- a/config.yaml
+++ b/config.yaml
@@ -10,6 +10,7 @@ etl:
   min_price: 10  # dollars
   max_price: 350  # dollars
 data_check:
+  project_name: nd0821-c2-build-model-workflow-starter-master-src_basic_cleaning
   kl_threshold: 0.2
 modeling:
   # Fraction of data to use for test (the remaining will be used for train and validation)
