main.py updated

--- a/config.yaml
+++ b/config.yaml
@@ -10,8 +10,17 @@ etl:
   min_price: 10  # dollars
   max_price: 350  # dollars
 data_check:
-  project_name: nd0821-c2-build-model-workflow-starter-master-src_basic_cleaning
   kl_threshold: 0.2
+  csv: "basic_cleaned_data.csv:latest"
+  ref: "basic_cleaned_data.csv:reference"
+data_split:
+  input: "basic_cleaned_data.csv:latest"
+train_random_forest:
+  output_artifact: "random_forest_export"
+  trainval_artifact: "trainval_data.csv:latest"
+test_regression_model:
+  mlflow_model: "random_forest_export:prod"
+  test_dataset: "test_data.csv:latest"
 modeling:
   # Fraction of data to use for test (the remaining will be used for train and validation)
   test_size: 0.2
